--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -13,14 +13,18 @@
 		    <th>Title</th>
 		    <th>ISBN</th>
 		    <th>Year</th>
+		    <th>Price</th>
+		    <th>Category</th>
 		</tr>  
     	<tr th:each = "book : ${books}">
     		<td th:text="${book.author}"></td>  	
     		<td th:text="${book.title}"></td>
     		<td th:text="${book.isbn}"></td>
     		<td th:text="${book.year}"></td>
- 				<td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger" >Delete</a></td> 
- 				<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>	
+    		<td th:text="${book.price}"></td>
+    		<td th:text="${book.category.name}"></td> 
+ 			<td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger" >Delete</a></td> 
+ 			<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>	
     	</tr>
      </table>
      <a href="/add" class="btn btn-success">Add Book</a>    	
