--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -26,7 +26,7 @@
 		    <th>Year</th>
 		    <th>Price</th>
 		    <th>Category</th>
-		    <th sec:authorize="hasRole('ADMIN')"> </th>
+		    <th sec:authorize="hasAuthority('ADMIN')"> </th>
 		</tr>  
     	<tr th:each = "book : ${books}">
     		<td th:text="${book.author}"></td>  	
@@ -35,7 +35,7 @@
     		<td th:text="${book.year}"></td>
     		<td th:text="${book.price}"></td>
     		<td th:text="${book.category.name}"></td> 
-    		<td sec:authorize="hasRole('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-xs btn-danger">Delete</a></td> 
+    		<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-xs btn-danger">Delete</a></td> 
  			<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>	
     	</tr>
      </table>
